--- a/index.html
+++ b/index.html
@@ -72,7 +72,16 @@
     <section id="gallery" class="container content text-center text-whiter">
       <h1 class="title">Gallery</h1>
 
-<div class="elfsight-app-3e2f269c-e541-491d-9e19-b2cc6e7ffc0c"></div>
+      <div id="gallery">
+        <img src="images/5d0f682906c059fb6e3cf984fdf7be83.jpg" alt="">
+        <img src="" alt="">
+
+        <a href="#">
+            <img src="" alt="">
+        </a>
+
+    </div>
+
     </section>
 
     <footer>
@@ -98,8 +107,8 @@
         </div>
     </div>
     </footer>
-
-    <script src="https://apps.elfsight.com/p/platform.js" defer></script>
+    <script src="https://apps.elfsight.com/p/platform.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/cube-gallery-js/src/index.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous" defer></script>
     <script src="script.js"></script>
   </body>
