--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       <div id="order" class="col text-center fs-4 m-auto container ">
         <h1 class="text-center title great-vibes ">Order</h1>  
         <h3>Accepted paymen cashapp or venmo
-          Available within 24-48 hrs of paymen
+          Available within 24-48 hrs of payment.
         </h3>
         <button>Place Order Now</button>  
       </div>
