--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 								<h1 class="mt-1 mb-0">Drip N Dip</h1>
 								<div class="border-top border-primary mx-auto w-50"></div>
 								<h3 class="pt-2">TREATS</h3>
-								<button class="btn m-1 btn-warning btn-lg"><a href="#" >About Us</a></button>
+								<button class="btn m-1 btn-warning btn-lg text-dark"><a href="#about" >About Us</a></button>
 								<button class="btn m-1 btn-info btn-lg"><a href="#" >Order Now</a></button>
 							</div>
 						</div>
@@ -100,8 +100,6 @@
 								<h3 class="pt-2 text-uppercase">Made for you</h3>
 								<p class="lead">We make your events memorable <br>with our flavours.</p>
 								<button class="btn m-1 btn-info btn-lg"><a href="#">See More</a></button>
-
-
 							</div>
 						</div>
 
@@ -130,9 +128,43 @@
 
 
 	<!-- Main Page Heading -->
+	<section id="about">
+
+
+	<div  class="col-12 text-center mt-5">
+		<h1 class="text-dark pt-4">All in good taste</h1>
+		<div class="border-top border-primary mx-auto w-25"></div>
+		<p class="lead">Satisfaction at first bite</p>
+	</div>
 
 
 	<!-- Three Column Section -->
+	
+	<div class="container">
+		<div class="row my-5">
+
+			<div class="col-md-4 my-4">
+				<img src="images/15.jpg" alt="" class="w-100">
+				<h4 class="my-4 text-center text-dark">Whats your mood?</h4>
+				<p> Are you in the mood for Milk chocolate, dark chocolate, white chocolate, or even maybe Vanilla! Whatever your choice, we'll make it delicious.</p>
+			</div>
+
+			<div class="col-md-4 my-4">
+				<img src="https://images.unsplash.com/photo-1543158181-e6f9f6712055?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="" class="w-100">
+				<h4 class="my-4 text-center text-dark">Always Fresh!</h4>
+				<p>All orders are made to order to guarantee freshness. Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident iusto vero blanditiis corporis nesciunt excepturi saepe est rem in dorro.</p>
+			</div>
+
+			<div class="col-md-4 my-4">
+				<img src="images/321.jpg" alt="" class="w-100">
+				<h4 class="my-4 text-center text-dark">Not just Strawberries!</h4>
+				<p>Maybe strawberries arent your thing. Then thats ok! Reach out to us so we can go over what your in need of and how we can make something special.</p>
+			</div>
+
+
+		</div>
+	</div>
+</section>
 
 	<!-- End Three Column Section -->
 
@@ -141,6 +173,24 @@
 
 
 	<!-- Start Fixed Background IMG -->
+	<div class="fixed-background">
+		<div class="row text-body py-5">
+			<div class="col-12 text-center mx-auto">
+				<h1>Get in touch</h1>
+				<h3 class="py-4">Send me a message for any questions or to place an order</h3>
+				<button class="btn m-1 btn-info btn-lg"><a href="#">Contact me</a></button>
+			</div>
+		</div>
+
+		<div class="fixed-wrap">
+			<div class="fixed"></div>
+		</div>
+	</div>
+
+<div class="container m-5 p-5">
+	<div class="elfsight-app-3c5d9266-988c-4548-9e35-f6439ee44b0a"></div>
+</div>
+
 
 	<!-- End Fixed Background IMG -->
  
@@ -173,7 +223,7 @@
 
 
 	<!-- Script Source Files -->
-
+	<script src="https://apps.elfsight.com/p/platform.js" defer></script>
 	<!-- jQuery -->
 	<script src="js/jquery-3.5.1.min.js"></script>
 	<!-- Bootstrap 4.5 JS -->
